--- a/Lets_FindUs/app/src/main/res/layout/fragment_matching.xml
+++ b/Lets_FindUs/app/src/main/res/layout/fragment_matching.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.matching.MatchingFragment">
 
+    <Button
+        android:id="@+id/matching_button"
+        style="@android:style/Widget.Material.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/matching_button_show_meetings"
+        android:textAlignment="center"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/map" />
+
     <FrameLayout
         android:id="@+id/map"
         android:layout_width="match_parent"
@@ -16,7 +28,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+        app:layout_constraintTop_toBottomOf="@+id/searchView" >
+
+    </FrameLayout>
 
     <SearchView
         android:id="@+id/searchView"
