--- a/Lets_FindUs/app/src/main/res/layout/fragment_matching.xml
+++ b/Lets_FindUs/app/src/main/res/layout/fragment_matching.xml
@@ -28,9 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" >
-
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
     <SearchView
         android:id="@+id/searchView"
