Added proper theming according to app mockup, added action mode when clicking on modify fab in the profile tab
Customized primary and secondary color according to mockup. Customized action mode for profile tab accordin to mockup.

--- a/Lets_FindUs/app/src/main/res/menu/matching_app_bar_menu.xml
+++ b/Lets_FindUs/app/src/main/res/menu/matching_app_bar_menu.xml
@@ -10,5 +10,5 @@
         android:id="@+id/filter"
         android:icon="@drawable/ic_round_filter_list_24"
         android:title="@string/filter"
-        app:showAsAction="ifRoom|withText"/>
+        app:showAsAction="ifRoom"/>
 </menu>
