--- a/Lets_FindUs/app/src/main/res/values/styles.xml
+++ b/Lets_FindUs/app/src/main/res/values/styles.xml
@@ -4,8 +4,18 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-
+        <item name="actionModeStyle">@style/Widget.App.ActionMode</item>
+        <item name="toolbarStyle">@style/CustomToolBarStyle</item>
         <!-- <item name="colorAccent">@color/colorAccent</item> -->
+    </style>
+
+    <style name="Widget.App.ActionMode" parent="Widget.AppCompat.ActionMode">
+        <item name="background">@color/colorPrimary</item>
+        <item name="theme">@style/ActionModeTheme</item>
+    </style>
+
+    <style name="CustomToolBarStyle" parent="@style/Widget.AppCompat.Toolbar">
+        <item name="titleTextColor">@color/title_text_color</item>
     </style>
 
 </resources>
