--- a/Lets_FindUs/app/src/main/res/layout/fragment_profile.xml
+++ b/Lets_FindUs/app/src/main/res/layout/fragment_profile.xml
@@ -55,13 +55,13 @@
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/floating_modify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_round_create_24"
-        app:backgroundTint="#ffcc80"
+        app:backgroundTint="@color/colorSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -80,7 +80,7 @@
             android:layout_marginTop="16dp"
             android:text="Dati obbligatori"
             android:textColor="#000000"
-            android:textSize="14sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -92,6 +92,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="Nickname"
+            android:textSize="18sp"
             android:textAlignment="viewStart"
             android:textColor="#000000"
             app:layout_constraintStart_toStartOf="parent"
@@ -104,6 +105,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:text="Sesso"
+            android:textSize="18sp"
             android:textAlignment="viewStart"
             android:textColor="#000000"
             app:layout_constraintStart_toStartOf="parent"
@@ -117,6 +119,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="Anno di nascita"
+            android:textSize="18sp"
             android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -129,6 +132,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:text="Gazz"
+            android:textSize="18sp"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/obbligatory_data_label" />
@@ -140,6 +144,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:text="Maschio"
+            android:textSize="18sp"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nickname_value" />
@@ -152,6 +157,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:text="1999"
+            android:textSize="18sp"
             android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
