--- a/Lets_FindUs/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Lets_FindUs/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,6 +14,7 @@
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_profile_black_24dp"
-        android:title="@string/title_profile" />
+        android:title="@string/title_profile"
+        />
 
 </menu>
