--- a/Lets_FindUs/app/src/main/res/layout/fragment_profile.xml
+++ b/Lets_FindUs/app/src/main/res/layout/fragment_profile.xml
@@ -27,7 +27,7 @@
                 android:layout_height="140dp"
                 android:layout_marginTop="8dp"
                 android:src="@drawable/ic_favourites_black_24dp"
-                app:civ_border_color="#90caf9"
+                app:civ_border_color="@color/colorPrimary"
                 app:civ_border_width="3dp"
                 app:civ_shadow="true"
                 app:civ_shadow_color="#b0bec5"
