--- a/Lets_FindUs/app/src/main/res/menu/profile_menu.xml
+++ b/Lets_FindUs/app/src/main/res/menu/profile_menu.xml
@@ -3,6 +3,6 @@
     <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_outline_settings_24"
-        android:title="@string/filter"
+        android:title="@string/settings"
         app:showAsAction="ifRoom"/>
 </menu>
