--- a/Lets_FindUs/app/src/main/res/menu/edit_mode_menu.xml
+++ b/Lets_FindUs/app/src/main/res/menu/edit_mode_menu.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/confirm"
         android:icon="@drawable/ic_round_check_24"
-        android:title="@string/filter"
+        android:title="@string/confirm"
         app:showAsAction="ifRoom"/>
 </menu>
