--- a/Lets_FindUs/app/src/main/res/values/colors.xml
+++ b/Lets_FindUs/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorSecondaryDark">#ca9b52</color>
     <color name="colorSecondaryLight">#ffffb0</color>
 
-    <color name="title_text_color">#000000</color>
+    <color name="black">#000000</color>
 
     <!-- <color name="colorAccent">#03DAC5</color> -->
 </resources>
