--- a/Lets_FindUs/app/src/main/res/layout/fragment_profile.xml
+++ b/Lets_FindUs/app/src/main/res/layout/fragment_profile.xml
@@ -2,9 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_height="wrap_content" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent"
     android:background="@color/cardview_light_background">
-
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
@@ -56,7 +55,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:layout_marginBottom="8dp"
-                            android:text="TextView"
+                            android:text="@string/nickname"
                             android:textAlignment="center"
                             android:textColor="@color/black"
                             android:textSize="30sp"
