--- a/Lets_FindUs/app/src/main/res/values/styles.xml
+++ b/Lets_FindUs/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="actionModeStyle">@style/Widget.App.ActionMode</item>
         <item name="toolbarStyle">@style/CustomToolBarStyle</item>
+        <item name="colorAccent">@color/colorPrimary</item>
         <!-- <item name="colorAccent">@color/colorAccent</item> -->
     </style>
 
