--- a/Lets_FindUs/app/src/main/res/layout/fragment_matching.xml
+++ b/Lets_FindUs/app/src/main/res/layout/fragment_matching.xml
@@ -11,7 +11,8 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="0dp">
+        android:padding="0dp"
+        android:layout_marginBottom="15dp">
 
     </FrameLayout>
 
