--- a/Lets_FindUs/app/src/main/res/values/styles.xml
+++ b/Lets_FindUs/app/src/main/res/values/styles.xml
@@ -8,6 +8,8 @@
         <item name="toolbarStyle">@style/CustomToolBarStyle</item>
         <item name="colorAccent">@color/colorPrimary</item>
         <!-- <item name="colorAccent">@color/colorAccent</item> -->
+        <item name="android:windowActivityTransitions">true</item>
+        <item name="android:windowContentTransitions">true</item>
     </style>
 
     <style name="Widget.App.ActionMode" parent="Widget.AppCompat.ActionMode">
