--- a/Lets_FindUs/app/src/main/res/layout/activity_view_picture.xml
+++ b/Lets_FindUs/app/src/main/res/layout/activity_view_picture.xml
@@ -8,12 +8,11 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:transitionName="@string/image_transition"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_favourites_black_24dp"
-        android:transitionName="@string/image_transition"/>
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
