--- a/Lets_FindUs/app/src/main/res/layout/activity_first_opening.xml
+++ b/Lets_FindUs/app/src/main/res/layout/activity_first_opening.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".FirstOpening">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_round_create_24"
+        android:focusable="true" />
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment2"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -16,6 +28,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/first_opening_fragment_manager"/>
+        app:navGraph="@navigation/first_opening_fragment_manager">
+
+    </androidx.fragment.app.FragmentContainerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
