--- a/Lets_FindUs/app/src/main/res/layout/fragment_information_two.xml
+++ b/Lets_FindUs/app/src/main/res/layout/fragment_information_two.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/cardview_light_background"
+    android:paddingBottom="@dimen/appintro_bottombar_height">
 
     <ImageView
         android:id="@+id/imageView2"
