--- a/Lets_FindUs/app/src/main/res/layout/activity_client.xml
+++ b/Lets_FindUs/app/src/main/res/layout/activity_client.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".ClientActivity">
+        tools:context=".client.ClientActivity">
 
         <TextView
             android:id="@+id/client_device_info_text_view"
