Changed default Text

--- a/Lets_FindUs/app/src/main/res/layout/cards_layout.xml
+++ b/Lets_FindUs/app/src/main/res/layout/cards_layout.xml
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="8dp"
-                android:text="TextView"
+                android:text="Nickname"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="TextView"
+                android:text="Data"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 card_view:layout_constraintBottom_toBottomOf="@+id/card_data_icon"
@@ -91,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="TextView"
+                android:text="Hour"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 card_view:layout_constraintBottom_toBottomOf="@+id/card_time_icon"
